# pyo3-lab

./: README.md  justfile  main.py  pyproject.toml
rust/: .gitignore  Cargo.toml  rust.pyi
rust/src/: lib.rs
