[project]
name = "pybind-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.9.1",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
# 这是关键：告诉 maturin Rust crate 的位置
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
# module-name = "pybind_lab"
